cmake_minimum_required(VERSION 3.5.0)
project( asio_net C CXX)
set(CMAKE_C_COMPILER clang-6.0)
set(CMAKE_CXX_COMPILER clang++-6.0)
#set(CMAKE_VERBOSE_MAKEFILE ON)
#set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
set(Boost_USE_STATIC_RUNTIME OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_LIBS OFF)
add_definitions(-DBOOST_SYSTEM_NO_DECRECATED)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)

find_package(Boost 1.68.0 REQUIRED COMPONENTS system)
if(Boost_FOUND)
    include_directories(${CMAKE_SOURCE_DIR} ${Boost_INCLUDE_DIRS}) 
    link_directories(${Boost_LIBRARY_DIRS}) 
endif()
add_subdirectory(src)
